Updated the ShereKhan results to include residue :4 and the ShereKhan numeric results.
The numeric model in ShereKhan was previously buggy and did not return results.  This has been fixed
after I sent feedback to the authors.

--- a/test_suite/shared_data/dispersion/Hansen/sherekhan_results/cluster1/ns/ShereKhan_2013-10-28_14-33.conf
+++ b/test_suite/shared_data/dispersion/Hansen/sherekhan_results/cluster1/ns/ShereKhan_2013-10-28_14-33.conf
@@ -1,9 +1,9 @@
 {
   "Header": [
     "ShereKhan ver. 1.0",
-    "Time: Thu May 30 15:49:53 2013"
+    "Time: Mon Oct 28 14:33:23 2013"
   ],
-  "Project Name": "ShereKhan_2013-05-30_15-49",
+  "Project Name": "ShereKhan_2013-10-28_14-33",
   "datasets": [
     "sherekhan_frq1.in",
     "sherekhan_frq2.in"
@@ -27,12 +27,12 @@
       "nsteps": 6
     }
   },
-  "model": "CR",
+  "model": "BM",
   "residues": [
     {
-      "alpha": 0.5203,
+      "alpha": -0.2895,
       "flag": "on",
-      "name": "GLY70"
+      "name": "GLY4"
     }
   ]
 }
