--- a/test_suite/shared_data/dispersion/Hansen/sherekhan_results/cluster2/ns/ShereKhan_2013-10-28_14-30.conf
+++ b/test_suite/shared_data/dispersion/Hansen/sherekhan_results/cluster2/ns/ShereKhan_2013-10-28_14-30.conf
@@ -1,11 +1,12 @@
 {
   "Header": [
     "ShereKhan ver. 1.0",
-    "Time: Thu May 30 15:47:53 2013"
+    "Time: Mon Oct 28 14:30:27 2013"
   ],
-  "Project Name": "ShereKhan_2013-05-30_15-47",
+  "Project Name": "ShereKhan_2013-10-28_14-30",
   "datasets": [
-    "sherekhan_frq1.in"
+    "sherekhan_frq1.in",
+    "sherekhan_frq2.in"
   ],
   "exchange": "slow",
   "init": {
@@ -26,12 +27,12 @@
       "nsteps": 6
     }
   },
-  "model": "CR",
+  "model": "BM",
   "residues": [
     {
-      "alpha": 9999.0,
+      "alpha": 0.5203,
       "flag": "on",
-      "name": "GLY71"
+      "name": "GLY70"
     }
   ]
 }
