--- a/test_suite/shared_data/dispersion/Hansen/sherekhan_results/cluster2/cr72_slow/ShereKhan_2013-10-28_14-18.conf
+++ b/test_suite/shared_data/dispersion/Hansen/sherekhan_results/cluster2/cr72_slow/ShereKhan_2013-10-28_14-18.conf
@@ -1,14 +1,14 @@
 {
   "Header": [
     "ShereKhan ver. 1.0",
-    "Time: Thu May 30 15:45:44 2013"
+    "Time: Mon Oct 28 14:18:18 2013"
   ],
-  "Project Name": "ShereKhan_2013-05-30_15-45",
+  "Project Name": "ShereKhan_2013-10-28_14-18",
   "datasets": [
     "sherekhan_frq1.in",
     "sherekhan_frq2.in"
   ],
-  "exchange": "fast",
+  "exchange": "slow",
   "init": {
     "mode": "guess",
     "kex": {
@@ -16,13 +16,18 @@
       "max": 10000.0,
       "nsteps": 6
     },
-    "phi": {
+    "pB": {
       "min": 0.01,
-      "max": 5.0,
+      "max": 0.49,
+      "nsteps": 4
+    },
+    "csd": {
+      "min": 0.1,
+      "max": 10.0,
       "nsteps": 6
     }
   },
-  "model": "LM",
+  "model": "CR",
   "residues": [
     {
       "alpha": 0.5203,
