--- a/test_suite/shared_data/dispersion/Hansen/sherekhan_results/cluster3/cr72_slow/ShereKhan_2013-10-28_14-24.conf
+++ b/test_suite/shared_data/dispersion/Hansen/sherekhan_results/cluster3/cr72_slow/ShereKhan_2013-10-28_14-24.conf
@@ -1,13 +1,13 @@
 {
   "Header": [
     "ShereKhan ver. 1.0",
-    "Time: Thu May 30 15:47:53 2013"
+    "Time: Mon Oct 28 14:24:12 2013"
   ],
-  "Project Name": "ShereKhan_2013-05-30_15-47",
+  "Project Name": "ShereKhan_2013-10-28_14-24",
   "datasets": [
     "sherekhan_frq1.in"
   ],
-  "exchange": "fast",
+  "exchange": "slow",
   "init": {
     "mode": "guess",
     "kex": {
@@ -15,13 +15,18 @@
       "max": 10000.0,
       "nsteps": 6
     },
-    "phi": {
+    "pB": {
       "min": 0.01,
-      "max": 5.0,
+      "max": 0.49,
+      "nsteps": 4
+    },
+    "csd": {
+      "min": 0.1,
+      "max": 10.0,
       "nsteps": 6
     }
   },
-  "model": "LM",
+  "model": "CR",
   "residues": [
     {
       "alpha": 9999.0,
