--- a/test_suite/shared_data/dispersion/Korzhnev_et_al_2005/cpmg_fit_results/1H_SQ_CPMG.in
+++ b/test_suite/shared_data/dispersion/Korzhnev_et_al_2005/cpmg_fit_results/1H_SQ_CPMG.in
@@ -9,10 +9,14 @@ read ../hs_800.res d 1 S H1 25 800 0.03 @ c    # 1H SQ data at 800 MHz
 # (2) with delta_cs(N)<0, delta_cs(H)>0
 
 set m 2 0            # set 2-site exchange model; no simultaneous 15N/1H 180 pulse is applied in MQ sequences
-set k @ 0 500 u      # set kex(AB) equal to 500 1/s; adjustable (u)
+set k @ 0 187.147 u      # set kex(AB) equal to 500 1/s; adjustable (u)
 set p @ 0 0.999999 f # set populations 95%/5%
-set p @ 1 0.05 u     
-set c @ H1 1 0 -0.2 u # set 1H chemical shift in state B equals to -0.2, adjustable 
+set p @ 1 0.075444 u     
+set c @ N15 0 0 @ f
+set c @ N15 1 0 5.115756 u  # set 15N chemical shift in state B equals to 2.0, adjustable
+set c @ H1 0 0 @ f
+set c @ H1 1 0 0.300945 u # set 1H chemical shift in state B equals to -0.2, adjustable 
+set r @ M @ @ @ @ @ u g
 min                   # perform minimization
 write > d
 write > p
