The cpmg_fit script for the Korzhnev et al., 2005 15N ZQ CPMG data now starts at the relax solution.
This is to try to find better solutions for dw and dwH, thought it was not so successful.

--- a/test_suite/shared_data/dispersion/Korzhnev_et_al_2005/cpmg_fit_results/15N_ZQ_CPMG.in
+++ b/test_suite/shared_data/dispersion/Korzhnev_et_al_2005/cpmg_fit_results/15N_ZQ_CPMG.in
@@ -9,13 +9,13 @@ read ../zq_800.res d 1 Z H1/N15 25 800 0.03 @ c    # 15N/1H ZQ data at 800 MHz
 # (2) with delta_cs(N)<0, delta_cs(H)>0
 
 set m 2 0            # set 2-site exchange model; no simultaneous 15N/1H 180 pulse is applied in MQ sequences
-set k @ 0 187.147 u      # set kex(AB) equal to 500 1/s; adjustable (u)
+set k @ 0 371.076657461446 u      # set kex(AB) equal to 500 1/s; adjustable (u)
 set p @ 0 0.999999 f # set populations 95%/5%
-set p @ 1 0.075444 u     
+set p @ 1 0.05707800678239605 u     
 set c @ N15 0 0 @ f
-set c @ N15 1 0 5.115756 u  # set 15N chemical shift in state B equals to 2.0, adjustable
+set c @ N15 1 0 2.30604327221814 u  # set 15N chemical shift in state B equals to 2.0, adjustable
 set c @ H1 0 0 @ f
-set c @ H1 1 0 0.300945 u # set 1H chemical shift in state B equals to -0.2, adjustable 
+set c @ H1 1 0 0.576576043850393 u # set 1H chemical shift in state B equals to -0.2, adjustable 
 set r @ M @ @ @ @ @ u g
 min                   # perform minimization
 write > d
