--- a/test_suite/shared_data/dispersion/Korzhnev_et_al_2005/cpmg_fit_results/all_data_2_site.in
+++ b/test_suite/shared_data/dispersion/Korzhnev_et_al_2005/cpmg_fit_results/all_data_2_site.in
@@ -23,15 +23,32 @@ read ../hm_800.res d 1 M H1/N15 25 800 0.02 @ c    # 1H/15N MQ data at 800 MHz
 # performing two seperate optimizations (1) with delta_cs(N)>0, delta_cs(H)<0 and 
 # (2) with delta_cs(N)<0, delta_cs(H)>0
 
-set m 2 0            # set 2-site exchange model; no simultaneous 15N/1H 180 pulse is applied in MQ sequences
-set k @ 0 368.075 u      # set kex(AB) equal to 500 1/s; adjustable (u)
-set p @ 0 0.999999 f # set populations 95%/5%
-set p @ 1 0.055678 u     
+set m 3 0            # set 2-site exchange model; no simultaneous 15N/1H 180 pulse is applied in MQ sequences
+set k @ 0 368.075224340237810 u      # set kex(AB) equal to 500 1/s; adjustable (u)
+set p @ 0 0.999999999999999 f # set populations 95%/5%
+set p @ 1 0.055677665370023 u     
 set c @ N15 0 0 @ f
-set c @ N15 1 0 4.413451 u  # set 15N chemical shift in state B equals to 2.0, adjustable
+set c @ N15 1 0 4.413451295385187 u  # set 15N chemical shift in state B equals to 2.0, adjustable
 set c @ H1 0 0 @ f
-set c @ H1 1 0 -0.271799 u # set 1H chemical shift in state B equals to -0.2, adjustable 
-set r @ M @ @ @ @ @ u g
+set c @ H1 1 0 -0.271799433880579 u # set 1H chemical shift in state B equals to -0.2, adjustable 
+set r @ S H1  25 500 @  6.778901685616349 u g
+set r @ S H1  25 600 @  7.097457574164754 u g
+set r @ S H1  25 800 @  5.635892738874367 u g
+set r @ S N15 25 500 @  8.481132052795216 u g
+set r @ S N15 25 600 @  8.977844777932544 u g
+set r @ S N15 25 800 @ 10.490256957494095 u g
+set r @ Z N15 25 500 @  6.043941666541193 u g
+set r @ Z N15 25 600 @  6.827801822697070 u g
+set r @ Z N15 25 800 @  6.946693082577048 u g
+set r @ D N15 25 500 @  8.693570244455426 u g
+set r @ D N15 25 600 @ 10.744671857325738 u g
+set r @ D N15 25 800 @ 12.647868752250540 u g
+set r @ M H1  25 500 @  7.887263548378362 u g
+set r @ M H1  25 600 @  8.506480948916035 u g
+set r @ M H1  25 800 @ 11.276893369084453 u g
+set r @ M N15 25 500 @  9.245925304879110 u g
+set r @ M N15 25 600 @  9.949254911695823 u g
+set r @ M N15 25 800 @ 12.053030643443734 u g
 min                   # perform minimization
 write > d
 write > p
