Added some more files for the Fyn SH3 R1rho test data.
This includes the cpmg_fit input and output files, R1 data files for relax as R1 cannot optimised
yet, and a relax script.

--- a/test_suite/shared_data/dispersion/Fyn_SH3_R1rho/cpmg_fit_results/example_6.in
+++ b/test_suite/shared_data/dispersion/Fyn_SH3_R1rho/cpmg_fit_results/example_6.in
@@ -32,6 +32,7 @@ set c @ @ 1 0 4 u
 set c @ @ 2 0 0 f
 
 min     # perform minimization
+write > d    # look at optimized model parameters
 write > p    # look at optimized model parameters
 #backup backups/fit_r1r_2st.bk    # backup program state
 #write  backups/fit_r1r_2st.par p # write parameters to file
